--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
                     Manejamos otros servicios como la recarga de toner y mantenimiento y reparación de las impresoras.
                 </p>
             </div>
-        </div>
+            <div>
+               <a href="login.html"><img src="./imgs/profile.png" alt="" style="width: 100px;"></a>
+            </div>
     </footer>
 </body>
 
