--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div id="login-alert" class="alert">Invalid credentials. Please try again.</div>
   <div class="containerForms">
     <div id="containerFormProduct">
       <form id="formProduct">
@@ -107,4 +108,5 @@
   </div>
 </body>
 <script type="module" src="./js/admin.js"></script>
+
 </html>
