--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside" for="CARTUCHO-TODOS">Todos</label>
+                                <li><label class="nav_link nav_link--inside nav_link_all" for="CARTUCHO-TODOS">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside" for="CARTUCHO-HP-ORIGINAL">HP
                                         Original</label>
@@ -74,7 +74,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside" for="toner-todos">Todos</label>
+                                <li><label class="nav_link nav_link--inside nav_link_all" for="toner-todos">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside" for="toner-hp-original">HP
                                         Original</label>
