--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <section id="about-products">
             <h2 class="titulo-2">Categorías con las que trabajamos</h2>
             <div class="container-cards">
+                <div class="background-card">
+                    
+                </div>
                 <div class="card">
                     <img src="./imgs/cartucho-about-product.jpg" class="card-img" alt="">
                     <div class="card-body">
@@ -61,7 +64,7 @@
                         <p class="card-info">Los cartuchos que manejamos en varias marcas que sirven para
                             suministrar las impresoras como impresora multifuncional HP, Epson, Lexmark y Brother
                             Industries..</p>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo cartuchos</a>
+                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo</a>
                     </div>
                 </div>
                 <div class="card">
@@ -71,7 +74,7 @@
                         <p class="card-info">Son compuestos un polvo hecho de plásticos granulados esta
                             almacenado en un solo cartucho, y que permite un mayor grado de control, precisión y
                             rendimiento de tiempo al momento de imprimir.</p>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo tóner</a>
+                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo</a>
                     </div>
                 </div>
                 <div class="card">
@@ -81,7 +84,7 @@
                         <p class="card-info">Las Tintas son líquidas, utilizada para escribir o imprimir. Su
                             funcionamiento principal es la superficie para obtener un texto, imagen o patrón, con un
                             alto rendimiento.</p>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo botellas</a>
+                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo</a>
                     </div>
                 </div>
                 <div class="card">
@@ -246,7 +249,7 @@
                 </p>
             </div>
             <div>
-               <a href="login.html"><img src="./imgs/profile.png" alt="" style="width: 100px;"></a>
+               <a href="login.html" target="_blank"><img src="./imgs/profile.png" alt="" style="width: 100px;"></a>
             </div>
     </footer>
 </body>
