--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
                         </li>
                         <li class="lista-item">
                             <div class="lista-boton">
-                                <label class="nav_link" for="todos">Todos</label>
+                                <label class="nav_link all" for="todos">Todos</label>
                             </div>
                         </li>
                         <li class="lista-item lista-item--click">
@@ -55,7 +55,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside nav_link_all" for="CARTUCHO-TODOS">Todos</label>
+                                <li><label class="nav_link  nav_link_all" for="CARTUCHO-TODOS">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside" for="CARTUCHO-HP-ORIGINAL">HP
                                         Original</label>
@@ -74,7 +74,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside nav_link_all" for="toner-todos">Todos</label>
+                                <li><label class="nav_link  nav_link_all" for="toner-todos">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside" for="toner-hp-original">HP
                                         Original</label>
@@ -97,7 +97,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside" for="TONER_fOTOCOPIADORA-TODOS">Todos</label>
+                                <li><label class="nav_link nav_link_all" for="TONER_fOTOCOPIADORA-TODOS">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside"
                                         for="TONER_FOTOCOPIADORA-RICOH-ORIGINAL">Ricoh
@@ -118,7 +118,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside" for="BOTELLA_TINTA-TODOS">Todos</label>
+                                <li><label class="nav_link nav_link_all" for="BOTELLA_TINTA-TODOS">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside" for="BOTELLA_TINTA-HP-ORIGINAL">HP
                                         Original</label></li>
@@ -148,7 +148,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link--inside" for="CINTAS-TODOS">Todos</label>
+                                <li><label class="nav_link nav_link_all" for="CINTAS-TODOS">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside"
                                         for="CINTA_IMPRESION-EPSON-ORIGINAL">Epson
