--- a/index2.html
+++ b/index2.html
@@ -148,7 +148,7 @@
                                 <img src="imgs/arrow.svg" class="img-arrow" alt="arrow">
                             </div>
                             <ul class="sub-lista">
-                                <li><label class="nav_link nav_link_all" for="CINTAS-TODOS">Todos</label>
+                                <li><label class="nav_link nav_link_all" for="CINTA_IMPRESION-TODOS">Todos</label>
                                 </li>
                                 <li><label class="nav_link nav_link--inside"
                                         for="CINTA_IMPRESION-EPSON-ORIGINAL">Epson
@@ -179,6 +179,13 @@
                 </div>
                 <div class="category" id="toner" data-category="TONER-TODOS">
                 </div>
+                <div class="category" id="toner_fotocopiadora" data-category="TONER_fOTOCOPIADORA-TODOS">
+                </div>
+                <div class="category" id="botella_tinta" data-category="BOTELLA_TINTA-TODOS">
+                </div>
+                <div class="category" id="cintas" data-category="CINTA_IMPRESION-TODOS">
+                </div>
+
             </section>
         </div>
     </div>
