change main info style

--- a/index.html
+++ b/index.html
@@ -57,41 +57,33 @@
                 <div class="background-card">
                     
                 </div>
-                <div class="card">
+                <div class="card card-1">
                     <img src="./imgs/cartucho-about-product.jpg" class="card-img" alt="">
                     <div class="card-body">
                         <h2 class="card-title">Cartuchos</h2>
-                        <p class="card-info">Los cartuchos que manejamos en varias marcas que sirven para
+                        <p class="card-info">Manejamos en varias marcas que sirven para
                             suministrar las impresoras como impresora multifuncional HP, Epson, Lexmark y Brother
                             Industries..</p>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo</a>
+                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo -></a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./imgs/toner-about-product.jpg" class="card-img" alt="">
                     <div class="card-body">
                         <h2 class="card-title">Tóners</h2>
-                        <p class="card-info">Son compuestos un polvo hecho de plásticos granulados esta
-                            almacenado en un solo cartucho, y que permite un mayor grado de control, precisión y
-                            rendimiento de tiempo al momento de imprimir.</p>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo</a>
+                        <p class="card-info">Hecho de plásticos granulados esta
+                            almacenado en un solo cartucho, y que permite un mayor grado de control y
+                            rendimiento.</p>
+                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo -></a>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./imgs/fotocopiadora-about-products.jpeg" class="card-img" alt="">
                     <div class="card-body">
                         <h2 class="card-title">Botellas de tinta</h2>
-                        <p class="card-info">Las Tintas son líquidas, utilizada para escribir o imprimir. Su
-                            funcionamiento principal es la superficie para obtener un texto, imagen o patrón, con un
+                        <p class="card-info">Su funcionamiento principal es la superficie para obtener un texto, imagen o patrón, con un
                             alto rendimiento.</p>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./imgs/suministros-about-products.jpg" class="card-img" alt="">
-                    <div class="card-body">
-                        <h2 class="card-title">Descubre más categorias</h2>
-                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Categorias</a>
+                        <a class="card-btn" href="index2.html#cartuchos1" target="_blank">Catalogo -></a>
                     </div>
                 </div>
 
@@ -184,7 +176,7 @@
                                     src="imgs/sticker-png-money-back-guarantee-logo-graphy-others-emblem-label-service-logo-removebg-preview.png" alt=""></div>
                             <hr class="linea-tarjeta">
                             <h2 class="titulo-tarjeta">Garantía asegurada</h2>
-                            <p class="texto-tarjeta">Todos nuestros suministros tienen garantía 100%.</p>
+                            <p class="texto-tarjeta">Nuestros suministros tienen garantía 100%.</p>
                         </div>
                         <div class="tarjeta swiper-slide">
                             <div class="contenedor-img-tarjeta"><img class="img-tarjeta" src="imgs/png-transparent-quality-assurance-service-organization-quality-assurance-service-grass-quality-removebg-preview.png"
@@ -199,7 +191,7 @@
                             <hr class="linea-tarjeta">
                             <div class="contenedor-texto-tarjeta">
                                 <h2 class="titulo-tarjeta">Asesoría personalizada</h2>
-                                <p class="texto-tarjeta">Estaremos al tanto para resolver cualquier duda.</p>
+                                <p class="texto-tarjeta">Estamos al tanto para cualquier duda.</p>
                             </div>
                         </div>
 
