--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <div class="contenedor-img-tarjeta"><img class="img-tarjeta"
                                     src="imgs/sticker-png-money-back-guarantee-logo-graphy-others-emblem-label-service-logo-removebg-preview.png" alt=""></div>
                             <hr class="linea-tarjeta">
-                            <h2 class="titulo-tarjeta">Garantía asegurada</h2>
+                            <h2 class="titulo-tarjeta">Garantía</h2>
                             <p class="texto-tarjeta">Nuestros suministros tienen garantía 100%.</p>
                         </div>
                         <div class="tarjeta swiper-slide">
